# Living-Landz-re-

./: .env  .gitignore  Cargo.toml
crates/client/: Cargo.toml
crates/client/assets/shaders/: hexagon_pulse.wgsl
crates/client/src/: main.rs  states.rs
crates/client/src/camera/: mod.rs  plugin.rs  utils.rs
crates/client/src/camera/components/: cell_scene_camera.rs  main_camera.rs  mod.rs
crates/client/src/camera/input/: controller.rs  mod.rs
crates/client/src/camera/resources/: camera_settings.rs  mod.rs  scene_render_target.rs
crates/client/src/grid/: mod.rs  systems.rs
crates/client/src/grid/components/: action_indicator.rs  hex_hover_indicator.rs  hex_select_indicator.rs  mod.rs  unit_indicator.rs
crates/client/src/grid/input/: handlers.rs  mod.rs  systems.rs
crates/client/src/grid/materials/: hex_highlight_material.rs  hex_pulse_material.rs  mod.rs
crates/client/src/grid/meshes/: hex_mesh.rs  mod.rs
crates/client/src/grid/plugins/: grid_input_plugin.rs  grid_plugin.rs  mod.rs
crates/client/src/grid/resources/: hex_mesh.rs  mod.rs  road_preview.rs  selected_hexes.rs
crates/client/src/grid/systems/: action_indicators.rs  grid_setup.rs  mod.rs  road_preview.rs  unit_indicators.rs
crates/client/src/networking/: events.rs  mod.rs  plugin.rs  systems.rs
crates/client/src/networking/client/: handlers.rs  mod.rs  network_client.rs
crates/client/src/networking/handlers/: actions.rs  auth.rs  debug.rs  inventory.rs  mod.rs  territory.rs  units.rs  world.rs
crates/client/src/post_processing/: mod.rs  post_processing.rs
crates/client/src/rendering/: mod.rs
crates/client/src/rendering/lake/: mod.rs  plugin.rs  systems.rs
crates/client/src/rendering/mist/: mod.rs  plugin.rs  systems.rs
crates/client/src/rendering/ocean/: mod.rs  plugin.rs  systems.rs
crates/client/src/rendering/terrain/: debug.rs  mod.rs  plugin.rs  systems.rs
crates/client/src/rendering/territory/: cache.rs  mod.rs  systems.rs
crates/client/src/state/: mod.rs  plugin.rs
crates/client/src/state/resources/: action_tracker.rs  building_atlas.rs  connection_status.rs  current_organization.rs  game_data_cache.rs  game_time_config.rs  gauge_atlas.rs  inventory_cache.rs  mod.rs  moon_atlas.rs  notification_state.rs  player_info.rs  streaming_config.rs  tree_atlas.rs  unit_work_state.rs  units_cache.rs  units_data_cache.rs  world_cache.rs
crates/client/src/state/systems/: mod.rs  organization_tracking.rs  streaming.rs
crates/client/src/ui/: components.rs  mod.rs  plugin.rs
crates/client/src/ui/carousel/: systems.rs
crates/client/src/ui/debug/: components.rs  input_handler.rs  mod.rs  plugin.rs  systems.rs
crates/client/src/ui/frosted_glass/: blur_capture.rs  blur_pipeline.rs  material.rs  mod.rs  plugin.rs  resources.rs  wipe_material.rs
crates/client/src/ui/resources/: action_context.rs  action_selection_state.rs  action_state.rs  cell_state.rs  cell_view_state.rs  chat_state.rs  context_menu_state.rs  drag_state.rs  map_units_panel_state.rs  mod.rs  ui_state.rs  unit_selection_state.rs
crates/client/src/ui/systems/: action_bar.rs  action_menu.rs  action_panel_content.rs  action_panel_setup.rs  actions_panel.rs  cell_action_display.rs  cell_details.rs  cell_details_panel.rs  chat_panel.rs  chat_panel_setup.rs  clock.rs  context_menu.rs  map_units_panel.rs  menu_buttons.rs  mod.rs  notifications.rs  player_info.rs  top_bar.rs
crates/server/: Cargo.toml
crates/server/src/: action_processor.rs  lib.rs  main.rs
crates/server/src/auth/: mod.rs  password.rs
crates/server/src/database/: client.rs  mod.rs  terrain_database.rs
crates/server/src/database/actions/: action_manager.rs  mod.rs
crates/server/src/database/tables/: actions_table.rs  buildings_table.rs  cells_table.rs  exploration_table.rs  lake_data_table.rs  mod.rs  ocean_data_table.rs  organizations_table.rs  resources_table.rs  road_segments_table.rs  terrain_global_data_table.rs  terrains_table.rs  territory_contours_table.rs  types_table.rs  units_table.rs  voronoi_zones_table.rs
crates/server/src/dev/: dev_config.rs  mod.rs
crates/server/src/networking/: mod.rs  session.rs
crates/server/src/networking/server/: handlers.rs  mod.rs  network_server.rs
crates/server/src/population/: mod.rs  systems.rs
crates/server/src/road/: data.rs  intersection.rs  mod.rs  pathfinding.rs  sdf_generation.rs  spline.rs
crates/server/src/units/: mod.rs  name_generator.rs  portrait_generator.rs  unit_calculator.rs
crates/server/src/utils/: chunks.rs  geometry.rs  hex.rs  jittering.rs  mod.rs  portraits.rs
crates/server/src/utils/file_system/: cache.rs
crates/server/src/world/: mod.rs
tools/game_seed/: .gitignore  README.md  migration_seed_tables.sql  pyproject.toml
tools/game_seed/data/: buildings.json  harvest.json  items.json  lookups.json  recipes.json  translations.json
tools/game_seed/src/game_seed/: __init__.py  cli.py  loader.py  seeder.py  validators.py
tools/game_seed/tests/: test_seed.py
(+337 files in other folders)
