[workspace]
members = ["crates/client", "crates/server", "crates/shared"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["O'Brian"]
license = "MIT"


[workspace.dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "async_executor",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_image",
    "bevy_input_focus",
    "bevy_mesh",
    "bevy_mesh_picking_backend",
    "bevy_log",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_sprite_picking_backend",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_dev_tools",
    "std",
    "multi_threaded",
    "default_font",
    "png",
] }

anyhow = "1.0"
dotenv = "0.15"

hexx = { version = "0.22", features = ["bevy"] }
i_triangle = "0.38.0"
rand = "0.9.2"

# Images
image = "0.25.8"
imageproc = "0.25.0"
resvg = "0.45.1"
tiny-skia = "0.11"
usvg = "0.45.1"

# Parallelization
rayon = "1.10"

# Database (serveur) and serialization
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime (serveur)
tokio = { version = "1.42", features = ["full"] }

# Networking
tokio-tungstenite = "0.28" # WebSocket async avec tokio
tungstenite = "0.28"       # WebSocket
futures = "0.3"
bincode = "2.0.1"

url = "2.5.7"
