[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

bevy = { workspace = true }
bincode = { workspace = true }
hexx = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }

chrono = { workspace = true }

[features]
default = []
dev = ["bevy/dynamic_linking"] # Hot reload en dev
