[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "territory"
path = "src/bin/territory_contour.rs"

[dependencies]
shared = { path = "../shared" }

bevy = { workspace = true }
bevy_ui_text_input = "0.6"
bincode = { workspace = true }
hexx = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
i_triangle = { workspace = true }

chrono = { workspace = true }

[features]
default = []
dev = ["bevy/dynamic_linking"] # Hot reload en dev
